Fixed gaps when filter

--- a/Frontend/maincss.css
+++ b/Frontend/maincss.css
@@ -127,7 +127,7 @@ main {
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
 }
 
 .recipe-card {
@@ -135,6 +135,7 @@ main {
     margin-bottom: 20px;
     box-shadow: 0 1px 3px #000000;
     border-radius: 5px;
+    margin: 30px;
 }
 
 .recipe-card img {
